# REID_SDK

./: .gitignore  CMakeLists.txt  README.md
include/: dragon.h
include/core/: blob.h  model.h  thread.h
include/dragon/core/: common.h  context.h  context_cuda.h  graph.h  graph_gradient.h  mixedmem.h  operator.h  operator_gradient.h  operator_schema.h  registry.h  tensor.h  typeid.h  types.h  workspace.h
include/dragon/operators/activation/: dropout_op.h  elu_op.h  prelu_op.h  relu_op.h  selu_op.h  sigmoid_op.h  softmax_op.h  tanh_op.h
include/dragon/operators/arithmetic/: add_op.h  bias_add_op.h  clip_op.h  div_op.h  dot_op.h  eltwise_op.h  exp_op.h  gram_matrix_op.h  inner_product_op.h  log_op.h  matmul_op.h  mul_op.h  pow_op.h  scale_op.h  square_op.h  sub_op.h
include/dragon/operators/cast/: float2half_op.h
include/dragon/operators/control_flow/: compare_op.h  copy_op.h  scan_op.h
include/dragon/operators/loss/: l1_loss_op.h  l2_loss_op.h  sigmoid_cross_entropy_op.h  smooth_l1_loss_op.h  softmax_cross_entropy_op.h  sparse_softmax_cross_entropy_op.h  sparse_softmax_focal_loss_op.h
include/dragon/operators/misc/: accuracy_op.h  gradient_op.h  image_data_op.h  initialize_op.h  proposal_op.h  python_op.h
include/dragon/operators/mpi/: base_mpi_op.h  mpi_broadcast_op.h  mpi_gather_op.h
include/dragon/operators/ndarray/: arange_op.h  argmax_op.h  argmin_op.h  at_op.h  concat_op.h  crop_op.h  expand_dims_op.h  flatten_op.h  one_hot_op.h  pad_op.h  random_pick_op.h  reduce_op.h  repeat_op.h  reshape_op.h  shape_op.h  slice_op.h  stack_op.h  tile_op.h  transpose_op.h
include/dragon/operators/norm/: batch_norm_op.h  batch_renorm_op.h  instance_norm_op.h  l2_norm_op.h
include/dragon/operators/recurrent/: lstm_unit_op.h
include/dragon/operators/update/: adam_update_op.h  collective_update_op.h  moving_average_op.h  nesterov_update_op.h  rmsprop_update_op.h  sgd_update_op.h  update_op_base.h
include/dragon/operators/vision/: bilinear_resize_op.h  conv_op.h  conv_op_base.h  conv_transpose_op.h  dense_concat_op.h  lrn_op.h  nn_resize_op.h  pooling_op.h  roi_align_op.h  roi_pooling_op.h
include/dragon/utils/: caffemodel.h  cast.h  cuda_device.h  cudnn_device.h  filler.h  logging.h  math_functions.h  omp_alternative.h  op_kernel.h  proto_utils.h  sse_alternative.h  sse_device.h  string.h  thread.h
include/tracker/: KalmanTracker.h  attribute.h  detector.h  objective.h  reidentity.h  tracker.h
include/utils/: bbox.h  cv.h  logging.h  nms.h  string.h
src/: main.cc
